--- a/ms-payment/pom.xml
+++ b/ms-payment/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
