--- a/ms-payment/src/main/resources/application.yml
+++ b/ms-payment/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
