--- a/ms-payment/src/main/resources/application.yml
+++ b/ms-payment/src/main/resources/application.yml
@@ -48,5 +48,5 @@ resilience4j:
     instances:
       myCircuitBreaker:
         baseConfig: default
-      myCustomCircuitBreaker:
+      getAvailablityBreaker:
         baseConfig: getAllAvailableCountriesConfig
