--- a/ms-country/src/main/resources/application.yml
+++ b/ms-country/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 server:
-  port: 8081
+  port: 8585
+
+spring:
+  application:
+    name: ms-country
+
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
 
